# AdventOfCode2018

day1/: day1.cabal
day1/src/: Main.hs
day2/: day2.cabal
day2/src/: Main.hs
day3/: day3.cabal
day3/src/: Main.hs
day4/: day4.cabal
day4/src/: Main.hs
day5/: day5.cabal
day5/src/: Main.hs
day6/: LICENSE  day6.cabal
day6/src/: Main.hs
day7/: day7.cabal
day7/src/: Main.hs
day8/: day8.cabal
day8/src/: Main.hs
