name:                day7
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/CampbellOwen/day7#readme
license:             BSD3
license-file:        LICENSE
author:              Owen Campbell
maintainer:          ocampbel@sfu.ca
copyright:           2018 Owen Campbell
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable day7
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,containers
                      ,split
